--- a/index.html
+++ b/index.html
@@ -7,6 +7,70 @@
 
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js"></script>
+
+    <!-- Bootstrap file-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+
+  <body onload="init()">
+    <section class="container">
+      <div class="card quiz-card">
+        <img src="./img/quiz-2058883_640.png" class="card-img-top" />
+        <div class="card-body">
+          <h5 class="card-title" id="question_text">Frage:</h5>
+
+          <div
+            class="card quiz-answer-card mb-2"
+            id="answer_1"
+            onclick="answer('answer_1')"
+          >
+            <div class="card-body">Antwort</div>
+          </div>
+          <div
+            class="card quiz-answer-card mb-2"
+            id="answer_2"
+            onclick="answer('answer_2')"
+          >
+            <div class="card-body">Antwort</div>
+          </div>
+          <div
+            class="card quiz-answer-card mb-2"
+            id="answer_3"
+            onclick="answer('answer_3')"
+          >
+            <div class="card-body">Antwort</div>
+          </div>
+          <div
+            class="card quiz-answer-card mb-2"
+            id="answer_4"
+            onclick="answer('answer_4')"
+          >
+            <div class="card-body">Antwort</div>
+          </div>
+
+          <div class="question-footer">
+            <span><b>1</b> von <b id="all-questions"></b> Fragen</span>
+            <button
+              onclick="nextQuestion()"
+              class="btn btn-primary"
+              id="next-button"
+              disabled
+            >
+              Nächste Frage
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
